--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.5.1",
     "patternomaly": "^1.3.2",
     "pinia": "^3.0.3",
+    "vercel": "^49.1.1",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
     "vuedraggable": "^4.1.0"
